Fixed word wrap in feedback window.

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -164,6 +164,7 @@
     -fx-background-color: transparent;
     -fx-font-family: "Open Sans Light";
     -fx-font-size: 13pt;
+    -fx-word-wrap: normal;
     -fx-text-fill: white;
 }
 
